# serializer version: 1
# name: test_dispatch_corpus_snapshot[alias_conflict_rejected]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'InvalidToolArgumentsError',
      'reason_code': 'alias_conflict',
      'received_keys': list([
        'file_path',
        'new_text',
        'old_text',
        'path',
      ]),
      'retry_allowed': True,
      'status': 'rejected',
      'tool': 'edit_file',
      'user_message': 'The edit_file tool call arguments contained conflicting aliases: file_path conflicts with path for canonical argument path. Reissue the tool call with only canonical JSON arguments.',
    }),
    'execution_status': dict({
      'exit_code': None,
      'preflight_rejected': True,
      'preservation_class': 'diagnostic',
      'reason': 'invalid_tool_arguments',
      'reason_code': 'alias_conflict',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[allowlist_present_tool_absent]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'PolicyDenied',
      'retry_allowed': False,
      'status': 'error',
      'tool': 'restricted_tool',
      'user_message': "Tool 'restricted_tool' not available in this context.",
    }),
    'execution_status': dict({
      'exit_code': None,
      'preservation_class': 'diagnostic',
      'reason': 'denied',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[allowlist_present_tool_present]
  dict({
    'artifact_count': 0,
    'content': 'ok',
    'execution_status': None,
    'is_error': False,
  })
# ---
# name: test_dispatch_corpus_snapshot[approval_denied_payload]
  dict({
    'artifact_count': 0,
    'content': dict({
      'reason': 'sandbox_blocked',
      'status': 'approval_denied',
    }),
    'execution_status': dict({
      'exit_code': None,
      'preservation_class': 'diagnostic',
      'reason': 'approval_denied',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[approval_pending_unsupported_surface]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'UnsupportedSurface',
      'retry_allowed': False,
      'status': 'error',
      'tool': 'needs_approval',
      'user_message': "Tool 'needs_approval' requires human approval, but the cron surface has no interactive approval path. Re-run with --interactive or from an interactive operator surface.",
    }),
    'execution_status': dict({
      'exit_code': None,
      'preservation_class': 'ephemeral',
      'reason': 'approval_pending',
      'source': 'tool_runtime',
      'status': 'unknown',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': False,
  })
# ---
# name: test_dispatch_corpus_snapshot[argument_clamping_truncates]
  dict({
    'artifact_count': 0,
    'content': 'fetched',
    'execution_status': None,
    'is_error': False,
  })
# ---
# name: test_dispatch_corpus_snapshot[denial_payload_generic]
  dict({
    'artifact_count': 0,
    'content': dict({
      'reason': 'sandbox_blocked',
      'status': 'denied',
    }),
    'execution_status': dict({
      'exit_code': None,
      'preservation_class': 'diagnostic',
      'reason': 'denied',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[denied_tools_block]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'PolicyDenied',
      'retry_allowed': False,
      'status': 'error',
      'tool': 'blocked_tool',
      'user_message': "Tool 'blocked_tool' not available in this context.",
    }),
    'execution_status': dict({
      'exit_code': None,
      'preservation_class': 'diagnostic',
      'reason': 'denied',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[handler_raises_runtime_error]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'RuntimeError',
      'retry_allowed': False,
      'status': 'error',
      'tool': 'exploding_tool',
      'user_message': "The tool 'exploding_tool' failed with an internal error.",
    }),
    'execution_status': dict({
      'exit_code': None,
      'preservation_class': 'diagnostic',
      'reason': 'runtime_error',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[happy_path_no_artifacts]
  dict({
    'artifact_count': 0,
    'content': 'hello world',
    'execution_status': None,
    'is_error': False,
  })
# ---
# name: test_dispatch_corpus_snapshot[happy_path_with_artifacts_budget_bypassed]
  dict({
    'artifact_count': 1,
    'content': 'published',
    'execution_status': None,
    'is_error': False,
  })
# ---
# name: test_dispatch_corpus_snapshot[happy_path_with_sandbox_descriptor_guard]
  dict({
    'artifact_count': 0,
    'content': 'sandboxed:echo ok',
    'execution_status': None,
    'is_error': False,
  })
# ---
# name: test_dispatch_corpus_snapshot[injection_refused_untrusted_origin]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'InjectionRefused',
      'retry_allowed': False,
      'status': 'error',
      'tool': 'safe_tool',
      'user_message': 'tool_call_inside_untrusted',
    }),
    'execution_status': dict({
      'exit_code': None,
      'preservation_class': 'diagnostic',
      'reason': 'denied',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[interactive_approval_pending_sets_status]
  dict({
    'artifact_count': 0,
    'content': dict({
      'approval_id': 'appr-corpus-1',
      'command': 'rm -rf /',
      'message': 'Resolve via approval endpoint.',
      'status': 'approval_required',
      'warning': 'destructive',
    }),
    'execution_status': dict({
      'exit_code': None,
      'preservation_class': 'ephemeral',
      'reason': 'approval_pending',
      'source': 'tool_runtime',
      'status': 'unknown',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': False,
  })
# ---
# name: test_dispatch_corpus_snapshot[missing_executable_shape_rejected]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'InvalidToolArgumentsError',
      'reason_code': 'missing_executable_shape',
      'received_keys': list([
        'path',
      ]),
      'retry_allowed': True,
      'status': 'rejected',
      'tool': 'edit_file',
      'user_message': 'Valid executable edit_file shapes are {"path":"...","old_text":"...","new_text":"..."} or {"path":"...","edits":[{"old_text":"...","new_text":"..."}]}.',
      'valid_shapes': list([
        list([
          'path',
          'old_text',
          'new_text',
        ]),
        list([
          'path',
          'edits',
        ]),
      ]),
    }),
    'execution_status': dict({
      'exit_code': None,
      'preflight_rejected': True,
      'preservation_class': 'diagnostic',
      'reason': 'invalid_tool_arguments',
      'reason_code': 'missing_executable_shape',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[missing_required_arguments_rejected]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'InvalidToolArgumentsError',
      'missing_keys': list([
        'value',
      ]),
      'reason_code': 'missing_required_arguments',
      'received_keys': list([
      ]),
      'retry_allowed': True,
      'status': 'rejected',
      'tool': 'strict_tool',
      'user_message': 'The strict_tool tool call is missing required argument(s): `value`. Reissue the tool call with complete JSON arguments. Required arguments: `value`.',
    }),
    'execution_status': dict({
      'exit_code': None,
      'preflight_rejected': True,
      'preservation_class': 'diagnostic',
      'reason': 'invalid_tool_arguments',
      'reason_code': 'missing_required_arguments',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[multiple_policies_would_deny_first_wins]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'OwnerOnly',
      'retry_allowed': False,
      'status': 'error',
      'tool': 'double_deny_tool',
      'user_message': "Tool 'double_deny_tool' restricted to owner.",
    }),
    'execution_status': dict({
      'exit_code': None,
      'preservation_class': 'diagnostic',
      'reason': 'denied',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[nested_tool_inherits_contextvar]
  dict({
    'artifact_count': 0,
    'content': 'done',
    'execution_status': None,
    'is_error': False,
  })
# ---
# name: test_dispatch_corpus_snapshot[null_ctx_happy_path]
  dict({
    'artifact_count': 0,
    'content': 'result',
    'execution_status': None,
    'is_error': False,
  })
# ---
# name: test_dispatch_corpus_snapshot[owner_only_block_non_owner]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'OwnerOnly',
      'retry_allowed': False,
      'status': 'error',
      'tool': 'admin_tool',
      'user_message': "Tool 'admin_tool' restricted to owner.",
    }),
    'execution_status': dict({
      'exit_code': None,
      'preservation_class': 'diagnostic',
      'reason': 'denied',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[owner_only_pass_owner]
  dict({
    'artifact_count': 0,
    'content': 'ok',
    'execution_status': None,
    'is_error': False,
  })
# ---
# name: test_dispatch_corpus_snapshot[permission_matrix_channel_denies]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'UnsupportedSurface',
      'retry_allowed': False,
      'status': 'error',
      'tool': 'git_push',
      'user_message': "Tool 'git_push' denied: admin_only_denied_in_dm.",
    }),
    'execution_status': dict({
      'exit_code': None,
      'preservation_class': 'diagnostic',
      'reason': 'denied',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[permission_matrix_owner_skipped]
  dict({
    'artifact_count': 0,
    'content': 'ok',
    'execution_status': None,
    'is_error': False,
  })
# ---
# name: test_dispatch_corpus_snapshot[private_memory_read_blocked]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'PolicyDenied',
      'retry_allowed': False,
      'status': 'error',
      'tool': 'memory_get',
      'user_message': "Tool 'memory_get' not available in this context.",
    }),
    'execution_status': dict({
      'exit_code': None,
      'preservation_class': 'diagnostic',
      'reason': 'denied',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[profile_denies]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'PolicyDenied',
      'retry_allowed': False,
      'status': 'error',
      'tool': 'exec_command',
      'user_message': "Tool 'exec_command' not available in this context.",
    }),
    'execution_status': dict({
      'exit_code': None,
      'preservation_class': 'diagnostic',
      'reason': 'denied',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[result_truncated_marks_status]
  dict({
    'artifact_count': 0,
    'content': dict({
      'is_error': False,
      'result_omitted_chars': 1932,
      'result_original_chars': 2012,
      'result_truncated': True,
      'tool': 'exec_command',
    }),
    'execution_status': dict({
      'exit_code': 0,
      'preservation_class': 'retain_summary',
      'reason': None,
      'source': 'adapter',
      'status': 'success',
      'timed_out': False,
      'truncated': True,
      'version': 1,
    }),
    'is_error': False,
  })
# ---
# name: test_dispatch_corpus_snapshot[run_budget_exhausted_after_handler]
  dict({
    'artifact_count': 0,
    'content': 'xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx',
    'execution_status': None,
    'is_error': False,
  })
# ---
# name: test_dispatch_corpus_snapshot[run_budget_exhausted_before_handler]
  dict({
    'artifact_count': 0,
    'content': dict({
      'reason': 'tool_run_budget_exhausted',
      'retry_allowed': False,
      'status': 'control',
      'tool': 'web_fetch',
      'user_message': 'The tool was skipped by a runtime resource guard. Continue with available evidence or choose a smaller request.',
    }),
    'execution_status': dict({
      'exit_code': None,
      'preservation_class': 'ephemeral',
      'reason': 'tool_run_budget_exhausted',
      'source': 'tool_runtime',
      'status': 'unknown',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': False,
  })
# ---
# name: test_dispatch_corpus_snapshot[schema_invalid_arguments_rejected]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'InvalidToolArgumentsError',
      'reason_code': 'schema_validation_failed',
      'received_keys': list([
        'value',
      ]),
      'retry_allowed': True,
      'status': 'rejected',
      'tool': 'strict_tool',
      'user_message': 'The strict_tool tool call arguments did not match the tool schema: value expected string, got integer. Reissue the tool call with corrected JSON arguments.',
    }),
    'execution_status': dict({
      'exit_code': None,
      'preflight_rejected': True,
      'preservation_class': 'diagnostic',
      'reason': 'invalid_tool_arguments',
      'reason_code': 'schema_validation_failed',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[skill_call_mismatch]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'UnsupportedSurface',
      'retry_allowed': False,
      'status': 'error',
      'tool': 'my_skill',
      'user_message': 'my_skill is a skill, not a tool. Do not call skill names as tools. Use skill_view(name="my_skill") to read the skill instructions, then continue using only tools listed in Available Tools.',
    }),
    'execution_status': dict({
      'exit_code': None,
      'preservation_class': 'diagnostic',
      'reason': 'denied',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[tool_not_found_unknown_name]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'ToolNotFound',
      'retry_allowed': False,
      'status': 'error',
      'tool': 'no_such_tool',
      'user_message': 'Tool not found: no_such_tool. Do not retry unavailable tools; use only tools listed in Available Tools.',
    }),
    'execution_status': dict({
      'exit_code': None,
      'preservation_class': 'diagnostic',
      'reason': 'denied',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
# name: test_dispatch_corpus_snapshot[unparsed_raw_arguments_rejected]
  dict({
    'artifact_count': 0,
    'content': dict({
      'error_class': 'InvalidToolArgumentsError',
      'reason_code': 'unparsed_raw_arguments',
      'received_keys': list([
        '_raw',
      ]),
      'retry_allowed': True,
      'status': 'rejected',
      'tool': 'simple_tool',
      'user_message': 'The tool call arguments were not valid JSON and were not executed. Reissue the same tool call with complete JSON arguments that match the tool schema. Do not wrap the arguments in _raw, XML tags, or markdown fences. For large file edits, split the edit into smaller calls using an editing tool listed in Available Tools.',
    }),
    'execution_status': dict({
      'exit_code': None,
      'preflight_rejected': True,
      'preservation_class': 'diagnostic',
      'reason': 'invalid_tool_arguments',
      'reason_code': 'unparsed_raw_arguments',
      'source': 'tool_runtime',
      'status': 'error',
      'timed_out': False,
      'truncated': False,
      'version': 1,
    }),
    'is_error': True,
  })
# ---
